# c-systems-snippets

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: rbspsc.h
src/: rbspsc.c
tests/: bench_rbspsc.c  rbspsc_correctness.c  test_placeholder.c  test_rbspsc_correctness.c
